--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,8 +13,7 @@
         "skipLibCheck": true
     },
     "include": [
-        "src",
-        "tests"
+        "src"
     ],
     "exclude": [
         "node_modules",
