--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
         "dev": "ts-node-dev src/server.ts",
         "build": "tsc",
         "start": "node dist/server.js",
-        "test": "jest",
+        "test": "jest src/",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage"
     },
